--- a/testapp/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/testapp/en.lproj/MainStoryboard_iPhone.storyboard
@@ -604,7 +604,7 @@
                                                     <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="4" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="user_avatar.png" translatesAutoresizingMaskIntoConstraints="NO" id="V95-Vg-Hyp">
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" tag="4" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="user_avatar.png" translatesAutoresizingMaskIntoConstraints="NO" id="V95-Vg-Hyp">
                                                     <rect key="frame" x="5" y="2" width="42" height="40"/>
                                                     <constraints>
                                                         <constraint firstAttribute="width" constant="42" id="Bqf-5x-CBy"/>
@@ -884,7 +884,7 @@
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleAspectFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Lab-tg-2Rn">
                                         <rect key="frame" x="0.0" y="0.0" width="270" height="70"/>
-                                        <state key="normal" title="Button" image="Bond_logo.png">
+                                        <state key="normal" title="Button" image="Bond_app_About_Us.png">
                                             <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                         </state>
                                         <connections>
@@ -1046,7 +1046,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="Bond_logo.png" width="500" height="152"/>
+        <image name="Bond_app_About_Us.png" width="270" height="70"/>
         <image name="Default.png" width="320" height="480"/>
         <image name="FastForward.png" width="40" height="39"/>
         <image name="WIB_BG_blur.png" width="320" height="480"/>
